--- a/config/database.yml
+++ b/config/database.yml
@@ -1,24 +1,26 @@
 default: &default
   adapter: postgresql
-  pool: <%= ENV.fetch('RAILS_MAX_THREADS') { 20 } %>
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
   timeout: 5000
-  url: <%= ENV['DATABASE_URL'] %>
-  host: localhost
-  username: postgres
-  password: postgres
 
 development:
   <<: *default
   database: habit_tracker_development
+  username: postgres
+  password: postgres
+  host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test: &test
+test:
   <<: *default
   database: habit_tracker_test
+  username: postgres
+  password: postgres
+  host: localhost
 
 production:
   <<: *default
-  database: habit_tracker_development
-  
+  url: <%= ENV['DATABASE_URL'] %>
