--- a/config/database.yml
+++ b/config/database.yml
@@ -22,5 +22,9 @@ test:
   host: localhost
 
 production:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
+  timeout: 5000
   url: <%= ENV['DATABASE_URL'] %>
+  
